@@ -357,7 +357,7 @@ def add_from_purchased_but_needs_reinstall_data(purchased_but_may_need_reinstall
             parser = SoftwareCenterAgentParser(item)
             index_app_info_from_parser(parser, db_purchased, cache)
         except Exception, e:
-            logging.exception("error processing: %s " % e)
+            LOG.exception("error processing: %s " % e)
     # add new in memory db to the main db
     db.add_database(db_purchased)
     # return a query
@@ -368,10 +368,10 @@ def update_from_software_center_agent(db, cache, ignore_etag=False):
     """ update index based on the software-center-agent data """
     def _available_cb(sca, available):
         # print "available: ", available
-        logging.debug("available: '%s'" % available)
+        LOG.debug("available: '%s'" % available)
         sca.available = available
     def _error_cb(sca, error):
-        logging.warn("error: %s" % error)
+        LOG.warn("error: %s" % error)
         sca.available = []
     # use the anonymous interface to s-c-agent, scales much better and is
     # much cache friendlier
@@ -403,7 +403,7 @@ def update_from_software_center_agent(db, cache, ignore_etag=False):
             parser = SoftwareCenterAgentParser(entry)
             index_app_info_from_parser(parser, db, cache)
         except Exception, e:
-            logging.warning("error processing: %s " % e)
+            LOG.warning("error processing: %s " % e)
     # return true if we have data entries
     return len(sca.available) > 0
         
@@ -544,7 +544,7 @@ def index_app_info_from_parser(parser, db, cache):
             if k in globals():
                 w = globals()[k]
             else:
-                logging.debug("WEIGHT %s not found" % k)
+                LOG.debug("WEIGHT %s not found" % k)
                 w = 1
             term_generator.index_text_without_positions(s, w)
         # add data from the apt cache
