@@ -13,9 +13,8 @@ import xapian
 from softwarecenter.db.application import Application, AppDetails
 from softwarecenter.db.database import StoreDatabase
 from softwarecenter.db.database import parse_axi_values_file
-from softwarecenter.db.update import update_from_app_install_data, update_from_var_lib_apt_lists
 from softwarecenter.apt.aptcache import AptCache
-from softwarecenter.enums import *
+from softwarecenter.db.update import rebuild_database
 
 class TestMime(unittest.TestCase):
     """ tests the mime releated stuff """
@@ -24,7 +23,10 @@ class TestMime(unittest.TestCase):
         self.cache = AptCache()
 
     def test_most_popular_applications_for_mimetype(self):
-        db = StoreDatabase("/var/cache/software-center/xapian", self.cache)
+        pathname = "../data/xapian"
+        if not os.listdir(pathname):
+            rebuild_database(pathname)
+        db = StoreDatabase(pathname, self.cache)
         db.open()
         # all
         result = db.get_most_popular_applications_for_mimetype("text/html", only_uninstalled=False, num=5)
